# idmtools

./: #1271_-_Fetch_proper_version_for_1_5_1.patch  .buildinfo  .flake8  .gitattributes  .gitignore  .gitpod.yml  .readthedocs.yml  DEVELOPMENT_README.md  DevelopmentReadme.md  Dockerfile  Jenkinsfile  LICENSE.TXT  MAC_README.md  Makefile  NOTICES.TXT  README.md  analyzers-additems.html  analyzers-convert-dtk.html  analyzers-convert-idmt.html  analyzers-convert.html  analyzers-create.html  analyzers-example.html  analyzers-forcedir.html  analyzers-partial.html  analyzers-ssmt.html  analyzers.html  architecture.html  basic-installation.html  calibrate.html  changelog.html  changelog_0.1.0.html  changelog_1.0.0.html  changelog_1.0.1.html  changelog_1.1.0.html  changelog_1.2.0.html  changelog_1.2.2.html  changelog_1.3.0.html  changelog_1.4.0.html  changelog_1.5.0.html  changelog_1.5.1.html  (+233 more)
idmtools_cli/: .bumpversion.cfg  .bumpversion.nightly.cfg  .pypirc  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
idmtools_cli/idmtools_cli/: IPlatformCli.py  __init__.py  iplatform_cli.py  main.py
idmtools_cli/tests/: .coveragerc  Makefile  idmtools.ini  pytest.ini  test_config_file.py  test_example.py  test_experiment_basic.py  test_git_tags.py  test_github_url_parse.py  test_package_cli.py  test_simulation_basic.py  test_system_info.py  test_version.py
idmtools_core/: .bumpversion.cfg  .bumpversion.nightly.cfg  MANIFEST.in  Makefile  README.md  build_requirements.txt  dev.yml  dev_requirements.txt  dodo.py  idmtools_.ini  pyproject.toml  requirements-idmtools_idmtools_core-test.txt  requirements.txt  setup.py
idmtools_core/idmtools/: __init__.py  set_defaults.py
idmtools_core/tests/: .coveragerc  ITestWithPersistence.py  Makefile  __init__.py  create_auth_token_args.py  idmtools.ini  idmtools_default_location.ini  idmtools_item_sequence.ini  idmtools_item_sequence_no_config.ini  idmtools_slurm.ini  idmtools_uuid_error.ini  logger_demo.py  pytest.ini  run_idmtools_tests_p36.sh  run_idmtools_tests_p37.sh  run_tests.py  test_AnalyzeManager.py  test_ArmBuilder.py  test_COMPS_platform.py  test_CsvBuilder.py  test_YamlBuilder.py  test_analyze_manager.py  test_analyzers_local.py  test_arm_builder.py  test_asset_in_comps.py  test_assets.py  test_assst_in_comps.py  test_cache_enabled.py  test_cleanup.py  test_command_line.py  test_config.py  test_configuration.py  test_copy.py  test_csv_builder.py  test_dict.py  test_dtk.py  test_entity.py  test_experiment.py  test_experiment_factory.py  test_experiment_manager.py  (+29 more)
idmtools_models/: .bumpversion.cfg  .bumpversion.nightly.cfg  Makefile  README.md  pyproject.toml  requirements-idmtools_idmtools_models-test.txt  requirements.txt  setup.py
idmtools_models/idmtools_models/: __init__.py  docker_task.py  json_configured_task.py  templated_script_task.py
idmtools_models/python/: PythonExperiment.py  PythonSimulation.py
idmtools_models/tests/: .coveragerc  Makefile  idmtools.ini  pytest.ini  test_assets.py  test_experiment.py  test_json_configured_task.py  test_python_simulation.py  test_python_task.py  test_r_task.py  test_templated_script_task.py
idmtools_platform_comps/: .bumpversion.cfg  .bumpversion.nightly.cfg  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements.txt  setup.py
idmtools_platform_comps/idmtools_platform_comps/: COMPSPlatform.py  __init__.py  comps_cli.py  comps_commision_operations.py  comps_io_operations.py  comps_metadata_operations.py  comps_platform.py  plugin_info.py  ssmt_platform.py  suite_utils.py  utils.py
idmtools_platform_comps/ssmt_image/: Dockerfile  Makefile  bootstrap.sh  build_docker_image.py  build_ssmt_image.py  pip.conf  push_docker_image.py  requirements.txt
idmtools_platform_comps/tests/: Makefile  __init__.py  conftest.py  idmtools.ini  logger_demo.py  pytest.ini  test_COMPS_platform.py  test_add_simulations_to_experiment.py  test_analyzers_dtk_comps.py  test_analyzers_emod_comps.py  test_analyzers_python_comps.py  test_asset_in_comps.py  test_assetize_output.py  test_cleanup.py  test_cli.py  test_comps_platform.py  test_comps_plugin.py  test_comps_slurm_experiments.py  test_configure_task.py  test_create_sim_directory_map.py  test_download_workitem.py  test_dtk.py  test_experiment_operations.py  test_experiment_simulations.py  test_file_listings.py  test_files_download_by_id.py  test_filter_by_tags.py  test_filter_item.py  test_filter_simulations.py  test_flatten_item.py  test_get_files.py  test_get_files_comps.py  test_get_items.py  test_hooks.py  test_load_lib_and_wheel.py  test_logging.py  test_no_config.py  test_package_version.py  test_platform_factory.py  test_platform_fix_2327.py  (+10 more)
idmtools_platform_container/: .bumpversion.cfg  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
idmtools_platform_container/docker_image/: Dockerfile  Dockerfile_buildenv  ImageName  README.md  __init__.py  build_docker_image.py  docker_image_history.py  entrypoint.sh  pip.conf  push_docker_image.py  requirements.txt  rocky_meta_runtime.txt
idmtools_platform_container/idmtools_platform_container/: __init__.py  container_platform.py  plugin_info.py  utils.py
idmtools_platform_container/tests/: Makefile  __init__.py  cleanup_containers.py  helps.py  idmtools_container_exp_dir.ini  idmtools_container_sim_dir.ini  pytest.ini  test_analyzers.py  test_bash_sh.py  test_cli.py  test_container_platform.py  test_create_sim_directory_map.py  test_docker_operations.py  test_filter_by_tags.py  test_filter_item.py  test_filter_simulations.py  test_flatten_item.py  utils.py  (+6 more)
idmtools_platform_general/: .bumpversion.cfg  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
idmtools_platform_slurm/: .bumpversion.cfg  MANIFEST.in  Makefile  README.md  metadata.puml  pyproject.toml  requirements.txt  script_sequence.puml  setup.py  slurm_architecture.puml  slurm_file_operations.puml
idmtools_test/: .bumpversion.cfg  .bumpversion.nightly.cfg  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
(+2353 files in other folders)
