[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools_cli"
dynamic = ["version"]
description = "CLI for IDM-Tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "modeling",
    "IDM",
    "cli",
]
authors = [
    { name = "Sharon Chen", email = "schen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Mary Fisher", email = "mfisher@idmod.org" },
    { name = "Clark Kirkman IV", email = "ckirkman@idmod.org" },
    { name = "Benoit Raybaud", email = "braybaud@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click~=8.1.7",
    "click-plugins",
    "colorama~=0.4.6",
    "cookiecutter~=2.6.0",
    "idmtools>=3.0.0,<4.0.0",
    "tabulate>=0.8.9,<0.10",
    "pyperclip~=1.8",
    "yaspin>=1.2.0,<3.1.0",
]

[project.optional-dependencies]
test = [
    "idmtools[test]",
]

[project.scripts]
idmtools = "idmtools_cli.main:main"

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
idmtools_cli = [
    "*",
]

[tool.setuptools_scm]
root = ".."                           # keep if your monorepo needs it
version_scheme = "no-guess-dev"       # ← change to this (or "guess-next-dev")
local_scheme = "no-local-version"     # ← change to this (critical for PyPI/TestPyPI uploads)
fallback_version = "0.0.0.dev0"