[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools_models"
dynamic = ["version"]
description = "Core tools for modeling"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt"]
keywords = [
    "modeling",
    "IDM",
]
authors = [
    { name = "Ross Carter", email = "rcarter@idmod.org" },
    { name = "Sharon Chen", email = "shchen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Mary Fisher", email = "mafisher@idmod.org" },
    { name = "Mandy Izzo", email = "mizzo@idmod.org" },
    { name = "Clark Kirkman IV", email = "ckirkman@idmod.org" },
    { name = "Benoit Raybaud", email = "braybaud@idmod.org" },
    { name = "Jen Schripsema", email = "jschripsema@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "idmtools>=0.0.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[project.optional-dependencies]
test = [
    "idmtools[test]",
    "pyCOMPS~=2.11",
    "idmtools_test",
    "matplotlib~=3.10"
]
packaging = [
    "flake8",
    "coverage",
    "bump2version",
    "twine",
]

[project.entry-points."idmtools_task"]
idmtools_task_python = "idmtools_models.python.python_task:PythonTaskSpecification"
idmtools_task_python_json = "idmtools_models.python.json_python_task:JSONConfiguredPythonTaskSpecification"
idmtools_task_templated_script = "idmtools_models.templated_script_task:TemplatedScriptTaskSpecification"
idmtools_task_wrapper_script = "idmtools_models.templated_script_task:ScriptWrapperTaskSpecification"
idmtools_task_r = "idmtools_models.r.r_task:RTaskSpecification"
idmtools_task_r_json = "idmtools_models.r.json_r_task:JSONConfiguredRTaskSpecification"
idmtools_task_json = "idmtools_models.json_configured_task:JSONConfiguredTaskSpecification"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
idmtools_models = [
    "*",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"