[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools-platform-general"
dynamic = ["version"]
description = "General platform for IDM-Tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "modeling",
    "IDM",
]
authors = [
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Sharon Chen", email = "shchen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Jen Schripsema", email = "jschripsema@idmod.org" },
    { name = "Ross Carter", email = "rcarter@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "idmtools~=3.0.0",
    "idmtools_cli~=3.0.0",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[project.optional-dependencies]
test = [
    "idmtools[test]",
    "idmtools_test",
]
packaging = [
    "flake8",
    "coverage",
    "bump2version",
    "twine",
    "natsort",
]

[project.entry-points.idmtools_platform]
idmtools_platform_file = "idmtools_platform_file.plugin_info:FilePlatformSpecification"
idmtools_platform_process = "idmtools_platform_process.plugin_info:ProcessPlatformSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
file = "idmtools_platform_file.cli.file:file"

[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yaml", "*.json", "templates/*", "schemas/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"     # 3.0.0 → 3.0.1.devN after tag
local_scheme = "node-and-date"        # adds +gHASH.YYYYMMDD in dev
fallback_version = "3.0.0.dev0"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]