[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools_platform_general"
dynamic = ["version"]
description = "General platform for IDM-Tools"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt"]
keywords = [
    "modeling",
    "IDM",
]
authors = [
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Sharon Chen", email = "shchen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Jen Schripsema", email = "jschripsema@idmod.org" },
    { name = "Ross Carter", email = "rcarter@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "idmtools>=0.0.0,<1.0.0",
    "idmtools_cli>=0.0.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[project.optional-dependencies]
test = [
    "idmtools[test]",
    "idmtools_test",
]
packaging = [
    "flake8",
    "coverage",
    "bump2version",
    "twine",
    "natsort",
]

[project.entry-points."idmtools_platform"]
idmtools_platform_file = "idmtools_platform_file.plugin_info:FilePlatformSpecification"
idmtools_platform_process = "idmtools_platform_process.plugin_info:ProcessPlatformSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
file = "idmtools_platform_file.cli.file:file"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["idmtools_platform_*"]

[tool.setuptools.package-data]
idmtools_platform_file = [
    "*",
]
idmtools_platform_process = [
    "*",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"