[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools-platform-slurm"
dynamic = ["version"]
description = "Provides ability to run against Slurm"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "modeling",
    "IDM",
]
authors = [
    { name = "Sharon Chen", email = "schen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Clark Kirkman IV", email = "ckirkman@idmod.org" },
    { name = "Benoit Raybaud", email = "braybaud@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "idmtools_platform_general~=3.0.0",
    "dataclasses-json",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[project.optional-dependencies]
test = [
    "idmtools[test]",
    "idmtools_models",
    "idmtools_test",
]

[project.entry-points.idmtools_platform]
idmtools_platform_slurm = "idmtools_platform_slurm.plugin_info:SlurmPlatformSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
slurm = "idmtools_platform_slurm.cli.slurm:slurm"

[tool.setuptools]
package-data = { "idmtools_platform_slurm" = ["*"] }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"     # 3.0.0 → 3.0.1.devN after tag
local_scheme = "node-and-date"        # adds +gHASH.YYYYMMDD in dev
fallback_version = "3.0.0.dev0"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
